// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceholderNode isSpecialChildPlaceholder should render CodeBranchIcon for special child placeholder 1`] = `
<DocumentFragment>
  <g
    data-testid="mock-layer"
  >
    <g
      class="placeholder-node"
      data-nodelabel="test-placeholder"
      data-testid="placeholder-node__test-placeholder"
    >
      <foreignobject
        data-nodelabel="test-placeholder"
        height="0"
        width="0"
      >
        <div
          class="placeholder-node__container"
          data-testid="undefined|test-placeholder"
        >
          <div
            class="placeholder-node__container__image"
            title="Click to add a step"
          >
            <span
              class="pf-v6-c-icon pf-m-lg"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 384 512"
                  width="1em"
                >
                  <path
                    d="M384 144c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 36.4 24.3 67.1 57.5 76.8-.6 16.1-4.2 28.5-11 36.9-15.4 19.2-49.3 22.4-85.2 25.7-28.2 2.6-57.4 5.4-81.3 16.9v-144c32.5-10.2 56-40.5 56-76.3 0-44.2-35.8-80-80-80S0 35.8 0 80c0 35.8 23.5 66.1 56 76.3v199.3C23.5 365.9 0 396.2 0 432c0 44.2 35.8 80 80 80s80-35.8 80-80c0-34-21.2-63.1-51.2-74.6 3.1-5.2 7.8-9.8 14.9-13.4 16.2-8.2 40.4-10.4 66.1-12.8 42.2-3.9 90-8.4 118.2-43.4 14-17.4 21.1-39.8 21.6-67.9 31.6-10.8 54.4-40.7 54.4-75.9zM80 64c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16zm0 384c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zm224-320c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </foreignobject>
      <foreignobject
        class="placeholder-node__label"
        height="24"
        width="150"
        x="-75"
        y="-1"
      >
        <div
          class="placeholder-node__label__text"
        >
          <span
            title="test-placeholder"
          >
            test-placeholder
          </span>
        </div>
      </foreignobject>
    </g>
  </g>
</DocumentFragment>
`;

exports[`PlaceholderNode isSpecialChildPlaceholder should render PlusCircleIcon for regular placeholder 1`] = `
<DocumentFragment>
  <g
    data-testid="mock-layer"
  >
    <g
      class="placeholder-node"
      data-nodelabel="test-placeholder"
      data-testid="placeholder-node__test-placeholder"
    >
      <foreignobject
        data-nodelabel="test-placeholder"
        height="0"
        width="0"
      >
        <div
          class="placeholder-node__container"
          data-testid="undefined|test-placeholder"
        >
          <div
            class="placeholder-node__container__image"
            title="Click to add a step"
          >
            <span
              class="pf-v6-c-icon pf-m-lg"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </foreignobject>
      <foreignobject
        class="placeholder-node__label"
        height="24"
        width="150"
        x="-75"
        y="-1"
      >
        <div
          class="placeholder-node__label__text"
        >
          <span
            title="test-placeholder"
          >
            test-placeholder
          </span>
        </div>
      </foreignobject>
    </g>
  </g>
</DocumentFragment>
`;
